solve z-index and pointer-events problem

--- a/planet/src/index.css
+++ b/planet/src/index.css
@@ -9,6 +9,8 @@
     overflow: hidden;
     background-color: black;
     font-family: 'Futuristic', sans-serif;
+    z-index: 0;
+
     
 }
 
@@ -19,6 +21,11 @@
     top: 0;
     left: 0;
     background-color: transparent;
+    z-index: 10;
+    pointer-events: none;
+
+    
+    
     
 }
 
@@ -28,6 +35,8 @@
     align-items: start;
     justify-content: end;
     height: 100vh;
+    z-index: 20; 
+  
 
 
 }
@@ -60,6 +69,13 @@
       border: 2px solid #fff;
       cursor: pointer;
       transition: all 0.8s cubic-bezier(0.23, 1, 0.320, 1);
+      z-index: 30;
+      pointer-events: auto;
+  
+      
+     
+    
+    
       
 }
 
@@ -77,7 +93,7 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    
+    pointer-events: auto;
 
 }
 
